Fixed ToC jumped too high

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -15,6 +15,9 @@
         visibility 0s,
         opacity 0s,
         background 0s !important;
+
+    padding-top: 15.6rem;
+    padding-bottom: 7rem;
 }
 
 :root {
